--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2363,6 +2363,15 @@ text-align: center;
 text-align: center;
 }
 
+.news-main__item__mask {
+	display: block;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+}
+
 
 
 
